FACES-1311 adding util.config to logging for testing of ordering of artifacts

--- a/demos/bridge/icefaces1-portlet/src/main/resources/log4j.properties
+++ b/demos/bridge/icefaces1-portlet/src/main/resources/log4j.properties
@@ -27,3 +27,4 @@ log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.ResourceRend
 log4j.logger.com.liferay.faces.bridge.servlet.BridgeSessionListener=DEBUG
 log4j.logger.com.liferay.faces.demos.bean.ApplicantBackingBean=DEBUG
 log4j.logger.com.liferay.faces.util.lifecycle.DebugPhaseListener=DEBUG
+log4j.logger.com.liferay.faces.util.config=DEBUG
