FACES-2253 Refactor portlet namespaced components to comply with portlet 2.0 spec and allow them to be generated by alloy-generator

--- a/bridge-impl/pom.xml
+++ b/bridge-impl/pom.xml
@@ -79,6 +79,9 @@
 			<id>generate-components</id>
 			<properties>
 				<namespace>bridge</namespace>
+				<!-- To generate portlet components, run:
+					mvn generate-source -P generate-components -Dnamespace=portlet -Dnamespace.URI=http://java.sun.com/portlet_2_0
+				-->
 				<component.api.output.dir>../bridge-api/${component.impl.output.dir}</component.api.output.dir>
 			</properties>
 		</profile>
