--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -190,7 +190,7 @@
 			<plugin>
 				<artifactId>maven-install-plugin</artifactId>
 				<configuration>
-					<skip>true</skip>
+					<skip>false</skip>
 				</configuration>
 			</plugin>
 		</plugins>
