--- a/demos/portal/pom.xml
+++ b/demos/portal/pom.xml
@@ -22,6 +22,17 @@
 		<module>primefaces5-users-portlet</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>chat</id>
