FACES-2167: push the skip true further out into the leaf projects that need skipping.  showcase-portlet needs the poms for liferay-faces-showcase-demos and liferay-faces-demos which were not getting intalled because of skipping

--- a/demos/portal/pom.xml
+++ b/demos/portal/pom.xml
@@ -15,4 +15,14 @@
 		<module>jsf2-login-portlet</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
