FACES-2069 Rename alloy:importConstants to to alloy:loadConstants

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -124,8 +124,8 @@ alloy-image-general-example-1=Context-relative path to a resource via the [vdldo
 alloy-image-general-example-2=JSF resource via the `#{resource}` EL keyword
 alloy-image-general-example-3=JSF resource via the [vdldoc:alloy:image:library] and [vdldoc:alloy:image:name] attributes
 alloy-image-general-example-4=Clickable areas via the [vdldoc:alloy:image:usemap] attribute
-alloy-loadconstants=[javadoc:com.liferay.faces.alloy.taghandler.ImportConstants] is a [javadoc:javax.faces.view.facelets.TagHandler] which can obtain constants from Java for use in EL.
-alloy-loadconstants-general=Constants can be imported from `class`, `enum`, or `interface` types and are kept in a thread-safe, application-scoped cache unless [vdldoc:alloy:importConstants:cacheable]=`false`.
+alloy-loadconstants=[javadoc:com.liferay.faces.alloy.taghandler.LoadConstants] is a [javadoc:javax.faces.view.facelets.TagHandler] which can obtain constants from Java for use in EL.
+alloy-loadconstants-general=Constants can be imported from `class`, `enum`, or `interface` types and are kept in a thread-safe, application-scoped cache unless [vdldoc:alloy:loadConstants:cacheable]=`false`.
 alloy-loadconstants-general-example-1=Importing from a Java class
 alloy-loadconstants-general-example-2=Importing from a Java enum
 alloy-loadconstants-general-example-3=Importing from a Java interface
