FACES-1969 Develop alloy:form component (fixed ajax/non-ajax use-cases now that alloy:commandButton and alloy:commandLink have Ajax-based form submission by default thanks to FACES-2196)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -15,7 +15,7 @@ input_alloy_inputText=general:inputText.xhtml,InputTextModelBean.java,InputTextB
 input_alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml|size:inputTextarea.xhtml
 input_alloy_inputTime=general:inputTime.xhtml,InputTimeModelBean.java|filter:inputTime.xhtml,InputTimeModelBean.java|highlighter:inputTime.xhtml,InputTimeModelBean.java|instant-ajax:inputTime.xhtml,InputTimeModelBean.java|localization:inputTime.xhtml,InputTimeModelBean.java|min-max:inputTime.xhtml,InputTimeModelBean.java|step:inputTime.xhtml,InputTimeModelBean.java|time-pattern:inputTime.xhtml,InputTimeModelBean.java|validation:inputTime.xhtml,WorkHoursValidator.java,InputTimeModelBean.java
 misc_alloy_body=general:webappBody.xhtml,portletBody.xhtml
-misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
+misc_alloy_form=general:form.xhtml,FormBackingBean.java|non-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 misc_alloy_loadConstants=general:loadConstants.xhtml,ClassConstants.java,EnumConstants.java,InterfaceConstants.java
 misc_alloy_progressBar=general:progressBar.xhtml,ProgressBarBacking.java|client-side:progressBar.xhtml|server-events:progressBar.xhtml,ProgressBarBacking.java|vertical:progressBar.xhtml,ProgressBarBacking.java
