--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -111,8 +111,8 @@ alloy-field-message-styling-example-3=`FacesMessage.SEVERITY_ERROR`
 alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;fieldset&gt;` element in order to group form elements.
 alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-form=[javadoc:com.liferay.faces.alloy.component.form.Form] is a [javadoc:javax.faces.component.UIForm] component that renders a `&lt;form&gt;` element. Since it extends [javadoc:javax.faces.component.html.HtmlForm], it supports all the features of [vdldoc:h:form].
-alloy-form-general=By default, forms are submitted as a non-Ajax (full-page) postback.
-alloy-form-instant-ajax=Forms can be submitted via Ajax by adding an [vdldoc:f:ajax] child tag to a component such as [vdldoc:alloy:commandButton].
+alloy-form-general=When an [vdldoc:alloy:form] is submitted via [vdldoc:alloy:commandButton] or [vdldoc:alloy:commandLink] it is submitted via Ajax by default.
+alloy-form-non-ajax=Forms can be submitted via non-Ajax (full-page) postback by specifying [vdldoc:alloy:commandButton:ajax]=`false` for [vdldoc:alloy:commandButton] or [vdldoc:alloy:commandLink].
 alloy-form-view-params= View Parameters can be automatically included in full-page postbacks by setting [vdldoc:alloy:form:includeViewParams]=`true`.
 alloy-head=[javadoc:com.liferay.faces.alloy.component.head.Head] is a [javadoc:javax.faces.component.UIOutput] that renders a `&lt;head&gt;` element for webapps, but not for portlets. *In the case of portlets,* the presence of [vdldoc:alloy:head] informs the JSF portlet bridge that JSF resources with `target="head"` should be included in the `&lt;head&gt;` element rendered by the portal.<br/><br/>Since it extends [javadoc:javax.faces.component.html.HtmlHead], it supports all the features of [vdldoc:h:head]. However, *the main benefit* of using [vdldoc:alloy:head] instead of [vdldoc:h:head] is that all of the Liferay Faces Alloy resources (such as alloy.js) are automatically included in the `&lt;head&gt;` element.
 alloy-head-general=The usage of [vdldoc:alloy:head] in webapps is the same as with portlets. However, the surrounding tag in a webapp is `&lt;html&gt;` whereas the surrounding tag in a portlet is [vdldoc:f:view].
@@ -564,6 +564,7 @@ nav-bar=Nav Bar
 navigation=Navigation
 next=Next
 no-customers-selected=No Customers Selected
+non-ajax=Non-Ajax
 none=None
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
