FACES-1714 Develop Liferay Faces Showcase (clarified usage of "Append New Files to Preview" button).

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -368,7 +368,7 @@ alloy-video-html5-passthrough=The component can be utilized as an HTML5 passthro
 flash-player=Flash Player
 alternate-formats=Alternate Formats
 answer-at-stackoverflow=answer at stackoverflow
-append-new-files=Append New Files
+append-new-files-to-preview=Append New Files to Preview
 attribute-value=Attribute Value
 back-to-navigation-with=Back to Navigation with
 bbcode=BBCode
