FACES-1714 Develop Liferay Faces Showcase (added missing keys to i18n)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -423,6 +423,7 @@ country=Country
 creole=Creole
 custom-filter=Custom Filter
 customers=Customers
+danger=Danger
 data=Data
 data-model=Data Model
 date-of-birth=Date of Birth
@@ -433,6 +434,7 @@ default-value=Default Value
 delay=Delay
 delete=Delete
 disable=Disable
+disabled=Disabled
 dislike=Dislike
 dom-events=DOM Events
 drop-down=Dropdown
