FACES-2302 Add the runtime scope to the liferay-faces-bridge-impl artifact in the pom.xml descriptor for the liferay-faces-portal project

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -53,6 +53,7 @@
 			<groupId>com.liferay.faces</groupId>
 			<artifactId>liferay-faces-bridge-impl</artifactId>
 			<version>${project.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.portal</groupId>
