FACES-1714 Develop Liferay Faces Showcase (added aui:script and liferay-ui:input-editor use cases)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -236,7 +236,7 @@ alloy-outputremainingchars-default-value=When a *default value* of an associated
 alloy-outputremainingchars-max-length-events=There are two attributes to use for events:
 alloy-outputremainingchars-max-length-reached-1=The [vdldoc:alloy:outputRemainingChars:onMaxlengthReached] event occurs *every time* maxlength is reached.
 alloy-outputremainingchars-max-length-reached-2=The [vdldoc:alloy:outputRemainingChars:onceMaxlengthReached] event occurs *the first time* maxlength is reached.
-alloy-outputscript=[javadoc:com.liferay.faces.alloy.component.outputlink.OutputScript] is a [javadoc:javax.faces.component.UIOutput] component that renders an `&lt;script&gt;` element with `type="text/javascript"`. It supports all the features of [vdldoc:h:outputScript] and adds the [vdldoc:alloy:outputScript:use] attribute which provides the ability to specify AlloyUI or YUI modules as dependencies.
+alloy-outputscript=[javadoc:com.liferay.faces.alloy.component.outputlink.OutputScript] is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;script&gt;` element with `type="text/javascript"`. It supports all the features of [vdldoc:h:outputScript] and adds the [vdldoc:alloy:outputScript:use] attribute which provides the ability to specify AlloyUI or YUI modules as dependencies.
 alloy-outputscript-general=The script can be rendered in different *positions* on the page via the [vdldoc:alloy:outputScript:target] attribute. Valid values include <code>body</code>, <code>form</code>, and <code>head</code>. The default value of this attribute is an empty (null) value which causes the <code>&lt;script&gt;</code> to be rendered inline (corresponding to its position in the view). Specifying <code>body</code> for the target attribute will cause the <code>&lt;script&gt;</code> to be rendered as close to the closing body tag as possible.
 alloy-outputscript-general-example-1=Script rendered inline
 alloy-outputscript-general-example-2=Script rendered at the bottom of the page
@@ -365,7 +365,17 @@ alloy-video-alternate-formats=The component supports supplying alternate videos 
 alloy-video-alternate-formats-example-1=Supplying alternate videos via [vdldoc:alloy:resource] child tags.
 alloy-video-alternate-formats-example-2=Supplying alternate videos via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:video:value] attribute.
 alloy-video-html5-passthrough=The component can be utilized as an HTML5 passthrough element. *(Requires JSF 2.2+)*
-flash-player=Flash Player
+aui-script=[javadoc:com.liferay.faces.alloy.component.AUIScript] is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;script&gt;` element with `type="text/javascript"`.
+aui-script-general=The script can be rendered in different *positions* on the page via the [vdldoc:aui:script:position] attribute. Valid values include <code>auto</code>, <code>bottom</code>, and <code>inline</code>. The default value is <code>auto</code>.
+aui-script-general-example-1=Script rendered inline
+aui-script-general-example-2=Script rendered at the bottom of the page
+aui-script-general-script-1=This `&lt;script&gt;` is rendered inline. The drawback of inline scripts is that they block rendering of the rest of the page.
+aui-script-general-script-2=This `&lt;script&gt;` is rendered at the bottom of the page. The benefit of rendering scripts at the bottom is that they do not block rendering of the rest of the page.
+aui-script-modules=AlloyUI or YUI *modules* can be specified via the [vdldoc:aui:script:use] attribute.
+aui-script-modules-example-1=Event module
+aui-script-modules-example-2=Node module
+aui-script-modules-script-1=This example uses the `event` module in order to run the `&lt;script&gt;` once the `domready` event occurs. The `domready` event occurs *after* the page is rendered, so scripts which run on `domready` do not block rendering of the rest of the page.
+aui-script-modules-script-2=This example uses the `node` module in order to attach a callback to the `click` event of the `&lt;button&gt;`.
 alternate-formats=Alternate Formats
 answer-at-stackoverflow=answer at stackoverflow
 append-new-files-to-preview=Append New Files to Preview
@@ -511,6 +521,7 @@ fieldset-legend=Fieldset Legend
 filter=Filter
 first=First
 first-name=First Name
+flash-player=Flash Player
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string.
 footer=Footer
 highlighter=Highlighter
@@ -540,6 +551,13 @@ large=Large
 last=Last
 last-name=Last Name
 lazy=Lazy
+liferay-ui-input-editor=InputEditor is a Facelet composite component that renders a field for editing rich text.
+liferay-ui-input-editor-general=The general usage is to support authoring of rich text as *fragments of HTML*.
+liferay-ui-input-editor-bbcode=Authoring of *BBCode* rich text is supported by specifying the [vdldoc:liferay-ui:input-editor:editorImpl] attribute.
+liferay-ui-input-editor-default-value=A *default value* can specified using when the [vdldoc:liferay-ui:input-editor:value] attribute is bound via EL to a model bean property.
+liferay-ui-input-editor-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. Supported values for the [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute are `blur`, `focus`, and `valueChange` (the default).
+liferay-ui-input-editor-validation=The [vdldoc:portal:inputRichText:minPlainTextChars] and [vdldoc:portal:inputRichText:maxPlainTextChars] attributes control the *minimum/maximum number of plain text characters*, meaning characters that do not include HTML tags such as `&lt;strong&gt;`, `&lt;em&gt;`, and `&lt;a href="..."&gt;`.
+liferay-ui-input-editor-validation-example-1=Specifying `minPlainTextChars="10"` and `maxPlainTextChars="144"`
 left=Left
 like=Like
 link=Link
