--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		<faces.spec.version>2.1</faces.spec.version>
 		<faces.version>${mojarra.version}</faces.version>
 		<full.version>${project.version} (${codename} / ${timestamp} AD)</full.version>
+		<generator.component.namespace>none</generator.component.namespace>
 		<icefaces3.version>3.3.0</icefaces3.version>
 		<jstl.version>1.2</jstl.version>
 		<liferay.version>6.2.3</liferay.version>
@@ -917,7 +918,7 @@
 				<authors>Neil Griffin</authors>
 				<component.impl.output.dir>src/main/java</component.impl.output.dir>
 				<component.api.output.dir>${component.impl.output.dir}</component.api.output.dir>
-				<namespace.URI>http://liferay.com/faces/${namespace}</namespace.URI>
+				<namespace.URI>http://liferay.com/faces/${generator.component.namespace}</namespace.URI>
 			</properties>
 			<build>
 				<plugins>
