FACES-2062 Remove unnecessary configuration info and consoloidate redundant configuration info for generating components (renamed namespace property to generator.component.namespace and provided a default value in order to prevent a warning in the IDE)

--- a/bridge-impl/pom.xml
+++ b/bridge-impl/pom.xml
@@ -77,7 +77,7 @@
 		<profile>
 			<id>generate-components</id>
 			<properties>
-				<namespace>bridge</namespace>
+				<generator.component.namespace>bridge</generator.component.namespace>
 				<!-- To generate portlet components, run:
 					mvn generate-source -P generate-components -Dnamespace=portlet -Dnamespace.URI=http://java.sun.com/portlet_2_0
 				-->
