FACES-2062 Remove unnecessary configuration info and consoloidate redundant configuration info for generating components (renamed namespace property to generator.component.namespace and provided a default value in order to prevent a warning in the IDE)

--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -227,7 +227,7 @@
 					Bruno Basto,\
 					Kyle Stiemann
 				</authors>
-				<generator.component.namespace>alloy</generator.component.namespace>
+				<component.namespace>alloy</component.namespace>
 			</properties>
 		</profile>
 	</profiles>
