--- a/util/generator.properties
+++ b/util/generator.properties
@@ -3,7 +3,7 @@
 ##
 
 builder.authors=${authors}
-builder.components.definitions=./${namespace}-components.xml
+builder.components.definitions=./${component.namespace}-components.xml
 builder.copyright.year=2015
 
 ##
@@ -12,10 +12,10 @@ builder.copyright.year=2015
 
 
 builder.faces.api.output.dir=${component.api.output.dir}
-builder.faces.impl.output.dir=${component.impl.output.dir}
+builder.faces.impl.output.dir=src/main/java
 builder.faces.version=${faces.spec.version}
-builder.faces.taglib.xml.namespace=${namespace}
-builder.faces.taglib.xml.namespace.URI=${namespace.URI}
+builder.faces.taglib.xml.namespace=${component.namespace}
+builder.faces.taglib.xml.namespace.URI=${component.namespace.URI}
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 
 # Attributes do not need to be namespaced because they are all manually chosen.
