--- a/bridge-impl/pom.xml
+++ b/bridge-impl/pom.xml
@@ -77,11 +77,11 @@
 		<profile>
 			<id>generate-components</id>
 			<properties>
-				<generator.component.namespace>bridge</generator.component.namespace>
+				<component.namespace>bridge</component.namespace>
 				<!-- To generate portlet components, run:
 					mvn generate-source -P generate-components -Dnamespace=portlet -Dnamespace.URI=http://java.sun.com/portlet_2_0
 				-->
-				<component.api.output.dir>../bridge-api/${component.impl.output.dir}</component.api.output.dir>
+				<component.api.output.dir>../bridge-api/src/main/java</component.api.output.dir>
 			</properties>
 		</profile>
 	</profiles>
