--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 		<arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
 		<arquillian.graphene.version>2.0.0.Final</arquillian.graphene.version>
 		<codename>Thessalonica</codename>
+		<component.namespace>none</component.namespace>
 		<faces.group.id>javax.faces</faces.group.id>
 		<faces.api.artifact.id>jsf-api</faces.api.artifact.id>
 		<faces.api.scope>compile</faces.api.scope>
@@ -85,7 +86,6 @@
 		<faces.spec.version>1.2</faces.spec.version>
 		<faces.version>${mojarra.version}</faces.version>
 		<full.version>${project.version} (${codename} / ${timestamp} AD)</full.version>
-		<generator.component.namespace>none</generator.component.namespace>
 		<icefaces1.version>1.8.2</icefaces1.version>
 		<jstl.version>1.2</jstl.version>
 		<liferay.version>6.2.3</liferay.version>
@@ -870,12 +870,11 @@
 		</profile>
 		<profile>
 			<id>generate-components</id>
-			<!-- Note: this profile can only be actived from the alloy/, bridge-impl/, or portal/ directories. -->
+			<!-- Note: this profile can only be active from the alloy/, bridge-impl/, or portal/ directories. -->
 			<properties>
 				<authors>Neil Griffin</authors>
-				<component.impl.output.dir>src/main/java</component.impl.output.dir>
-				<component.api.output.dir>${component.impl.output.dir}</component.api.output.dir>
-				<namespace.URI>http://liferay.com/faces/${generator.component.namespace}</namespace.URI>
+				<component.api.output.dir>src/main/java</component.api.output.dir>
+				<component.namespace.URI>http://liferay.com/faces/${component.namespace}</component.namespace.URI>
 			</properties>
 			<build>
 				<plugins>
